# ML-aware-MySQL

./: CMakeLists.txt  README.md  download_albert.py  lex.h  sentiment_analyzer.h  sentiment_analyzer_wrapper.py  sql_yacc.yy  test.cpp  test_export.py  tokenizer.cpp  tokenizer.h  torchscript_export.py  udf_sentiment.cpp
Sentiment Analysis/: CMakeLists.txt  sentiment_analyzer.cpp  sentiment_analyzer_test.cpp  udf_sentiment.cpp
Sentiment Analysis/build_libs/: libc10.dylib  libomp.dylib  libtorch.dylib  libtorch_cpu.dylib
Sentiment Analysis/test/: test.cpp
UDF Samples/: knn_outlier_udf.cpp  model_trainer.py  outlier_knn.c  outlier_zscore.c  zscore_udf.cpp
UDF Samples Outlier Detection/: is_outlier_zscore.c  outlier_regression.cpp
albert_model/: config.json
dataset/: clean.sh  get_dataset.sh  load_sentiment_analysis.sql
